brat/test/golden/imports/use-illegal-z2.brat.golden
Error in test/golden/imports/use-illegal-z2.brat@4:22-27
main = lib.x, lib.y, lib.z
                     ^^^^^

  lib.z not found in (value) environment

